src/components/Header/Header.scss
.header {
    z-index: 1000 !important;
    height: 2rem;
    padding: 2.5rem 1rem 3rem 3rem;
    display: flex;
    width: 100%;
    position: relative;
    flex-direction: row;
    background-color: white;
    justify-content: space-between;
    align-items: center;
    position: fixed;
}

.delete_item {
    cursor: pointer;

}

.mycart_title {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    width: 100%;
}

.price_container {
    display: flex;
    flex-direction: row;
    font-size: 14px;

}

.cart_item_container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.item_image {
    width: 100px;
    height: 100px;
    border-radius: 1rem;
}

.cart_item {
    display: flex;
    flex-direction: row;
    gap: 1rem
}

.price_text {
    color: var(--primary-color);
    font-weight: bold;
}

.size_text {
    color: rgba(7, 7, 7, 0.6);
    font-size: 14px;
}

.cart {
    padding: 1rem 2rem;
    z-index: 90099999999999999999999999999 !important;
    position: absolute;
    display: flex;
    flex-direction: column;
    pad: 1rem 2rem;
    width: 30rem;
    gap: 1rem;

    max-height: 500px;
    right: 20px;
    background-color: white;
    top: 50px;
    border-radius: 1rem;
    border-style: solid;
    border-width: 1px;
    border-color: #F5F5F5;
}

.scrollable {
    overflow: scroll;
}

.header_section_1 {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;

    img {
        width: 100px;
        height: fit-content;
    }

    h4 {
        font-weight: lighter;
    }
}

.backdrop {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    /* Semi-transparent gray background */
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 100;
    /* Ensure the modal is on top of other content */
}

.header_section_2 {
    display: flex;
    flex-direction: row;
    column-gap: 1rem;

    .cart_number {
        position: absolute;
        top: 0;
        right: 0;
        background-color: var(--primary-color);
        border-radius: 100%;
        width: 20px;
        height: 20px;
        display: flex;
        justify-content: center;
        align-items: center;
        color: white
    }

    .icon {
        cursor: pointer;
        background-color: #F5F5F5;
        // background-color: red;
        position: relative;
        border-radius: 100%;
        width: 50px;
        display: flex;
        justify-content: center;
        align-items: center;
        aspect-ratio: 1;
    }
}

